# Simple-parser

./: .gitignore  CMakeLists.txt  Readme.md  lexer.h  main.cpp  parser.h
.github/workflows/: cmake.yml
src/: analyze.h  lexer.h  parser.h  pretty_print.h
test/: analyzer_test.cpp  catch_main.cpp  parser_test.cpp
