CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wall -Werror -O3")

INCLUDE(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
FIND_PACKAGE(Catch2 REQUIRED)
INCLUDE(Catch)

PROJECT(parser)

CONAN_BASIC_SETUP(NO_OUTPUT_DIRS TARGETS)

SET(SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)

ADD_LIBRARY(catch2_main STATIC test/catch_main.cpp)
TARGET_LINK_LIBRARIES(catch2_main Catch2::Catch2)
TARGET_INCLUDE_DIRECTORIES(catch2_main PUBLIC ${CONAN_INCLUDE_DIRS_CATCH2}/catch2/)

ADD_EXECUTABLE(parser_test test/parser_test.cpp)
TARGET_LINK_LIBRARIES(parser_test catch2_main)
TARGET_COMPILE_DEFINITIONS(parser_test PRIVATE CATCH_CONFIG_FAST_COMPILE CATCH_CONFIG_DISABLE_MATCHERS)
TARGET_PRECOMPILE_HEADERS(parser_test PRIVATE ${CONAN_INCLUDE_DIRS_CATCH2}/catch2/catch.hpp)
TARGET_INCLUDE_DIRECTORIES(parser_test PRIVATE ${SOURCE_DIR})

ADD_EXECUTABLE(analyzer_test test/analyzer_test.cpp)
TARGET_LINK_LIBRARIES(analyzer_test catch2_main)
TARGET_COMPILE_DEFINITIONS(analyzer_test PRIVATE CATCH_CONFIG_FAST_COMPILE CATCH_CONFIG_DISABLE_MATCHERS)
TARGET_PRECOMPILE_HEADERS(analyzer_test PRIVATE ${CONAN_INCLUDE_DIRS_CATCH2}/catch2/catch.hpp)
TARGET_INCLUDE_DIRECTORIES(analyzer_test PRIVATE ${SOURCE_DIR})

CATCH_DISCOVER_TESTS(parser_test)
CATCH_DISCOVER_TESTS(analyzer_test)
ENABLE_TESTING()
